[gd_scene load_steps=3 format=2]

[ext_resource path="res://menus/upgrade_menu_1/Popup.gd" type="Script" id=1]
[ext_resource path="res://ui/flowchart_menus/BG_white_grey-border.tres" type="StyleBox" id=2]

[node name="Popup" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 30
custom_constants/margin_top = 60
custom_constants/margin_left = 30
custom_constants/margin_bottom = 60
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 30.0
margin_top = 60.0
margin_right = 514.0
margin_bottom = 246.0
custom_styles/panel = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 483.0
margin_bottom = 185.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 473.0
margin_bottom = 175.0

[node name="RichTextLabel" type="RichTextLabel" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 463.0
margin_bottom = 141.0
size_flags_vertical = 3
text = "Are you sure you want to refuse the upgrade?"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 145.0
margin_right = 463.0
margin_bottom = 165.0

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 229.0
margin_bottom = 20.0
size_flags_horizontal = 3
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 2 )
custom_styles/focus = ExtResource( 2 )
custom_styles/normal = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0.546875, 0.546875, 0.546875, 1 )
custom_colors/font_color = Color( 0.546875, 0.546875, 0.546875, 1 )
custom_colors/font_color_hover = Color( 0.546875, 0.546875, 0.546875, 1 )
text = "YES"

[node name="BackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 233.0
margin_right = 463.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "NO"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_ConfirmButton_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
